# fake-casting-backend

./: README.md  fake_news (1).ipynb
LHD/: main.py  model.model  model.py  model.vec  pyproject.toml
