[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "lhd"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
flask = "^1.1"
python = "^3.7"
sklearn = "^0.0.0"
[tool.poetry.dev-dependencies]
